--- a/practic(4).html
+++ b/practic(4).html
@@ -384,7 +384,7 @@ News
 <div class="newsb" >
 <marquee>
 
-স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরিদর্শনের জন্য। এখানে ক্যাটাগরি আকারে সবকিছুই পরিদর্শন করতে পারবেন।  
+স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরিদর্শনের জন্য। এখানে ক্যাটাগরি আকারে সবকিছুই পরিদর্শন করতে পারবেন। স্নাতক সম্মান কোর্সের দ্বিতীয় বর্ষের ইনকোর্স ১ পরীক্ষা খুবই নিকটবর্তি। আগামী ৫ ফেব্রুয়ারী ২০১৯ ইনকোর্স ১ পরীক্ষা শুরু হবে।
 
 </marquee>
 </div>
