--- a/practic(4).html
+++ b/practic(4).html
@@ -33,6 +33,68 @@ body{
  </head> 
  <body> 
   <div class="container main"> 
+   
+   
+   
+   
+   
+   <style type="text/css">
+.toprk{
+border:2px solid silver;
+width:960px;
+height:300px;
+float:left;
+background:url(5.gif);
+}
+.logo1{
+margin:70px 0px 0px 10px;
+
+width:750px;
+height:80px;
+}
+.logo2{
+
+width:80px;
+height:80px;
+float:left;
+}
+
+.toptext{
+
+width:650px;
+height:80px;
+float:right;
+background:black;
+color:white;
+}
+.toptext span{
+font-size:25px;
+
+}
+.toptext tox{
+font-size:20px;
+}
+</style>
+<div class="toprk" >
+<div class="logo1">
+<div class="logo2" >
+<img src="#" width="80"height="80">
+</div>
+<div class="toptext" >
+<span>K.M.RASEL NEW EDUCATIONAL WEBSITE</span><br>
+<tox>My new profile</tox>
+</div>
+</div>
+</div>
+   
+   
+   
+   
+   
+   
+   
+   
+   
    <section class="banner-section" style="background-image: url(5.gif);"> 
     <div class="overlay"> 
      <div class="logo"> 
