--- a/practic(4).html
+++ b/practic(4).html
@@ -64,7 +64,7 @@ float:left;
 width:640px;
 height:80px;
 float:right;
-background:black;
+
 color:white;
 }
 .toptext span{
@@ -78,7 +78,7 @@ font-size:20px;
 <div class="toprk" >
 <div class="logo1">
 <div class="logo2" >
-<img src="https://www.jessoreboard.gov.bd/assets/jb/images/jb_logo.png" width="100"height="90">
+<img src="jb_logo.png" width="100"height="90">
 </div>
 <div class="toptext" >
 <span>K.M.RASEL NEW EDUCATIONAL WEBSITE</span><br>
