--- a/practic(4).html
+++ b/practic(4).html
@@ -44,7 +44,7 @@ border:2px solid silver;
 width:960px;
 height:300px;
 float:left;
-background:url(5.gif);
+background:url(https://seu.edu.bd/slider/banner_03.jpg);
 }
 .logo1{
 margin:50px 0px 0px 10px;
@@ -60,7 +60,7 @@ float:left;
 }
 
 .toptext{
-
+margin-top:5px;
 width:640px;
 height:80px;
 float:right;
