--- a/practic(4).html
+++ b/practic(4).html
@@ -509,7 +509,7 @@ margin-top:5px;
 <li>Learning Educational Websites<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVzcWKKMkvHsvQlrpLbADi0KXMtYfh-BAqDVUoViViA9JGzEeypfxuCOWc"width="120"height="100" ><a href="https://bn.khanacademy.org/" >£ Khan Academy</a><br><a href="https://bn.m.wikipedia.org/wiki/বাংলা_উইকিপিডিয়া" >£ Wikipidia</a><br><a href="http://nctb.gov.bd/" >£ Nctb board</a><br><a href="http://shikkhok.com/কোর্স-তালিকা/" >£ Sikkah</a></li>
 <li>The place of Bangladesh<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgtudlWztqfMTcj7P2zBX8Nh7UQnAIXj3apVYEtN6c5fVK3pngnfWGTig" width="120"height="100"><a href="https://www.shutterstock.com/search/bangladesh+river">£ The rivers</a><br><a href="###">£ The animals</a><br><a href="https://pixabay.com/en/photos/bangladesh/">£ The forest</a><br><a href="###">£ The mugium</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgtudlWztqfMTcj7P2zBX8Nh7UQnAIXj3apVYEtN6c5fVK3pngnfWGTig" width="120"height="100"><a href="https://www.shutterstock.com/search/bangladesh+river">£ The rivers</a><br><a href="###">£ The animals</a><br><a href="https://pixabay.com/en/photos/bangladesh/">£ The forest</a><br><a href="www.bangladeshmuseum.gov.bd/">£ The mugium</a></li>
 <li>Downloder sites<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAXYcOcOIAMAGwmC8qTAMF1hLpl8u4ckZ3vGwealhS7-UmKwSEw9NexhY"width="120" height="100"><a href="http://www.fusionbd.com">£ FusionBd</a><br><a href="https://www.bdmusic24.net/">£ Bd music</a><br><a href="https://banglanatok.com/">£ Waptrick</a><br><a href="https://youtube.com">£ Youtube</a></li>
   
