--- a/practic(4).html
+++ b/practic(4).html
@@ -85,7 +85,7 @@ font-size:20px;
 <div class="toprk" >
 <div class="logo1">
 <div class="logo2" >
-<img src="jb_logo.png" width="90"height="90">
+<img src="logo.png" width="90"height="90">
 </div>
 <div class="toptext" >
 <span>K.M.RASEL NEW EDUCATIONAL WEBSITE</span><br>
