--- a/practic(4).html
+++ b/practic(4).html
@@ -496,7 +496,7 @@ margin-top:5px;
 <li>কারিগরি শিক্ষা কর্নার<br>
 <img src="http://nctb.portal.gov.bd/sites/default/files/files/nctb.portal.gov.bd/front_service_box/1bb65a9d_62d2_42d1_8996_f6f06502c759/checklist-symbol%20(3).png"width="120"height="100"><a href="https://kmrasel9748.github.io/newexprience2/Computer" >£ কম্পিউটার</a><br><a href="#" >£ মার্কেটিং</a> <br><a href="https://www.sec.ac.bd/" >£ ইঞ্জিনিয়ারিং</a><br><a href="www.eduicon.com/Institute/More/?page=institute.php&Institute_Nature_ID=2&Institute_Category_ID=2&Degree_Level_ID=1" > £ ডিপ্লমা</a></li>
 <li>রেজাল্টশীট কর্নার<br>
-<a href="https://kmrasel9748.github.io/newexprience2/Results sheet.html"><img src="https://smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/result_sheet.png"width="120"height="100">£ এইচ,এস,সি<br>£ এস,এস,সি<br>£ জে,ডি.সি<br> £ কারিগরি শিক্ষা<br>£ স্নাতক সম্মান</a></li>
+<a href="https://kmrasel9748.github.io/newexprience2/Results sheet.html"><img src="https://image.shutterstock.com/image-vector/survey-exam-form-paper-sheets-260nw-588489734.jpg"width="120"height="100">£ এইচ,এস,সি<br>£ এস,এস,সি<br>£ জে,ডি.সি<br> £ কারিগরি শিক্ষা<br>£ স্নাতক সম্মান</a></li>
 <li>ব্যক্তিগত সাইট কর্নার<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy0zA7owI2ol_DdhYhnpRVbjLe2Nv6hnwwIGvfjzCqgDXvVcsd_i109Wc"width="120"height="100"><a href="https://kmrasel9748.github.io/newexprience2/My%20personal%20bayodata" >£ পার্সোনাল বায়োডাটা</a> <br><a href="#" >£ ফ্যামিলি ফটো</a><br><a href="https://kmrasel9748.github.io/newexprience2/n my profile page.html" >£ প্রোফাইল</a> <br><a href="https://kmrasel9748.github.io/newexprience2/Contact%20me2" >£ যোগাযোগ</a></li>
 <li>আমার প্রোগ্রাম সমূহ<br>
