--- a/practic(4).html
+++ b/practic(4).html
@@ -464,10 +464,7 @@ News
  
  
 <style type="text/css">
-. items ul li skan{
- list-style-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPugDBjm2HXUh0NiEX_T4n3b2Xz_JB4tr5oaNKx6OSs-i5qyFHFmAFOxtZ">
-  
- }
+
 .items ul li{
 margin:10px;
 padding:0px;
@@ -489,7 +486,7 @@ margin-top:5px;
 <div class="items" >
 <ul>
 <li>স্নাতক সম্মান কর্নার<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyqK0heBQFAoa5OrGPxqLZiqoNb-32Zc4eHYngiEaMEuE9bAoL8SW5U1W5Sw"width="120" height="100"><a href="#" ><skan> প্রথম বর্ষ </skan></a><br><a href="#" >£ দ্বিতীয় বর্ষ </a><br><a href="#" >£ তৃতীয় বর্ষ</a><br><a href="#" >£ চতুর্থ বর্ষ</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyqK0heBQFAoa5OrGPxqLZiqoNb-32Zc4eHYngiEaMEuE9bAoL8SW5U1W5Sw"width="120" height="100"><a href="#" >♦ প্রথম বর্ষ </a><br><a href="#" >£ দ্বিতীয় বর্ষ </a><br><a href="#" >£ তৃতীয় বর্ষ</a><br><a href="#" >£ চতুর্থ বর্ষ</a></li>
 <li>ইন্টারমিডিয়েট কর্নার<br> 
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQo_2Sz5paCMUtghKCnoUX6u1ZPRzyEeazN1_t1dsQfdfleRiFpKSmUY2A"width="120"height="100"><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 1st year.html" >£ প্রথম বর্ষ</a><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 2nd year.html" >£ দ্বিতীয় বর্ষ</a></li>
 <li>দাখিল কর্নার<br>
