--- a/practic(4).html
+++ b/practic(4).html
@@ -486,7 +486,7 @@ margin-top:5px;
 <div class="items" >
 <ul>
 <li>স্নাতক সম্মান কর্নার<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyqK0heBQFAoa5OrGPxqLZiqoNb-32Zc4eHYngiEaMEuE9bAoL8SW5U1W5Sw"width="120" height="100"><a href="#" >প্রথম বর্ষ </a><br><a href="#" >♥ দ্বিতীয় বর্ষ </a><br><a href="#" >♥ তৃতীয় বর্ষ</a><br><a href="#" >♥ চতুর্থ বর্ষ</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyqK0heBQFAoa5OrGPxqLZiqoNb-32Zc4eHYngiEaMEuE9bAoL8SW5U1W5Sw"width="120" height="100"><a href="#" >♥ প্রথম বর্ষ </a><br><a href="#" >♥ দ্বিতীয় বর্ষ </a><br><a href="#" >♥ তৃতীয় বর্ষ</a><br><a href="#" >♥ চতুর্থ বর্ষ</a></li>
 <li>ইন্টারমিডিয়েট কর্নার<br> 
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQo_2Sz5paCMUtghKCnoUX6u1ZPRzyEeazN1_t1dsQfdfleRiFpKSmUY2A"width="120"height="100"><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 1st year.html" >♥ প্রথম বর্ষ</a><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 2nd year.html" >♥ দ্বিতীয় বর্ষ</a></li>
 <li>দাখিল কর্নার<br>
@@ -522,11 +522,11 @@ margin-top:5px;
  
  <li>Online Newspapers<br>
 
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Dig3Hm41Mb3kbv1EfdCJGcKNEaepeRXSFCk54mrIRVCx2sKx9GsjuFc" width="120"height="100"><a href="https://www.prothomalo.com/">£ Prothom-Alo</a><br><a href="http://www.dailynayadiganta.com/">£ Noya-Digonto</a><br><a href="http://www.dailysangram.com/">£ Songgram</a><br><a href="https://www.jugantor.com/">£ Juganttor</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Dig3Hm41Mb3kbv1EfdCJGcKNEaepeRXSFCk54mrIRVCx2sKx9GsjuFc" width="120"height="100"><a href="https://www.prothomalo.com/">♥ Prothom-Alo</a><br><a href="http://www.dailynayadiganta.com/">♥ Noya-Digonto</a><br><a href="http://www.dailysangram.com/">♥ Songgram</a><br><a href="https://www.jugantor.com/">♥ Juganttor</a></li>
 
 <li>Magical website<br>
 
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPIUSIMT4oqB1zdHyT2Dx3y-LzwIbWpWd2FVxiGCjiC0XNSIB9uPWZg8YR_Q"width="120" height="100"><a href="http://www.thefacesoffacebook.com">£ World faces</a><br><a href="https://www.printfriendly.com/">£ Page printer</a><br><a href="https://zoomquilt.org">£ Vootury</a><br><a href="https://yyyyyyy.info">£ amazine</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPIUSIMT4oqB1zdHyT2Dx3y-LzwIbWpWd2FVxiGCjiC0XNSIB9uPWZg8YR_Q"width="120" height="100"><a href="http://www.thefacesoffacebook.com">♥ World faces</a><br><a href="https://www.printfriendly.com/">♥ Page printer</a><br><a href="https://zoomquilt.org">♥ Vootury</a><br><a href="https://yyyyyyy.info">♥ amazine</a></li>
  
  
  
