--- a/practic(4).html
+++ b/practic(4).html
@@ -99,7 +99,41 @@ font-size:20px;
    
    
    
-   
+   <style>
+   .menu li ss1{
+    color:red;
+    }
+    .menu li ss2{
+
+    color:red;
+
+    }
+    .menu li ss3{
+
+    color:red;
+
+    }
+    .menu li ss4{
+
+    color:red;
+
+    }
+    .menu li ss5{
+
+    color:red;
+
+    }
+    .menu li ss6{
+
+    color:red;
+
+    }
+    .menu li ss7{
+
+    color:red;
+
+    }
+    </style>
    
    
    
@@ -119,13 +153,13 @@ font-size:20px;
    </section> 
    <section class="menu-section"> 
     <ul class="menu"> 
-     <li><a href="https://kmrasel9748.github.io/newexprience2/index(01)">প্রথম পাতা</a></li> 
-     <li><a href="https://kmrasel9748.github.io/newexprience2/About%20me">সম্পর্কে</a></li> 
-     <li><a href="https://kmrasel9748.github.io/newexprience2/My%20personal%20bayodata">পার্সোনাল বায়োডাটা</a></li> 
-     <li><a href="https://kmrasel9748.github.io/newexprience2/Educational%20performation">শিক্ষাগত রেকর্ড</a></li> 
-     <li><a href="https://kmrasel9748.github.io/newexprience2/folafol.html">ফলাফল</a></li> 
-     <li><a href="https://kmrasel9748.github.io/newexprience2/my%20photography">ফটো</a></li> 
-     <li><a href="https://kmrasel9748.github.io/newexprience2/Contact%20me2">যোগাযোগ</a> </li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/index(01)"><ss1>প্রথম পাতা</ss1></a></li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/About%20me"><ss2>সম্পর্কে</ss2></a></li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/My%20personal%20bayodata"><ss3>পার্সোনাল বায়োডাটা<ss3></a></li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/Educational%20performation"><ss4>শিক্ষাগত রেকর্ড<ss4></a></li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/folafol.html"><ss5>ফলাফল</ss5></a></li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/my%20photography"><ss6>ফটো</ss6></a></li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/Contact%20me2"><ss7>যোগাযোগ</ss7></a> </li> 
     </ul> 
    </section> 
    
