--- a/practic(4).html
+++ b/practic(4).html
@@ -101,7 +101,7 @@ font-size:20px;
    
    <style>
    .menu li ss1{
-    color:red;
+    color:blue;
     }
     .menu li ss2{
 
@@ -110,27 +110,27 @@ font-size:20px;
     }
     .menu li ss3{
 
-    color:red;
+    color:green;
 
     }
     .menu li ss4{
 
-    color:red;
+    color:violet;
 
     }
     .menu li ss5{
 
-    color:red;
+    color:orange;
 
     }
     .menu li ss6{
 
-    color:red;
+    color:yellow;
 
     }
     .menu li ss7{
 
-    color:red;
+    color:green;
 
     }
     </style>
