--- a/practic(4).html
+++ b/practic(4).html
@@ -18,6 +18,13 @@ body{
   <title>RASEL KHAN NEW PROFILE</title> 
   <link rel="shortcut icon" type="image/x-icon" href="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/jb_logo.png"> 
   <!-- Bootstrap --> 
+ 
+ 
+ <link href='https://fonts.maateen.me/solaiman-lipi/
+
+font.css' rel='stylesheet'/>
+ 
+ 
   <link rel="stylesheet" type="text/css" href="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/admin/dist/css/AdminLTE.min.css" media="all"> 
   <link rel="stylesheet" type="text/css" href="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/css/bootstrap.min.css" media="all"> 
   <link rel="stylesheet" type="text/css" href="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/css/font-awesome.min.css" media="all"> 
