--- a/practic(4).html
+++ b/practic(4).html
@@ -2,7 +2,7 @@
  <body background="https://www.jessoreboard.gov.bd/assets/jb/images/bodybg1.png"> 
 body{
  background-img:url('https://www.jessoreboard.gov.bd/assets/jb/images/bodybg1.png');
- font-family:kalpurushregular;
+ font-family:"kalpurushregular";
  }
  
  </style>
