--- a/practic(4).html
+++ b/practic(4).html
@@ -263,9 +263,10 @@ border:2px solid silver;
 </head>
 <style type="text/css">
 .left{
+ border:2px solid silver;
 margin-top:20px;
 width:70%;
-height:200px;
+height:180px;
 float:left;
 }
 .notice{
