--- a/x2.html
+++ b/x2.html
@@ -520,79 +520,20 @@ News
 
  
  
-<style type="text/css">
 
-.items ul li{
-margin:10px 10px 10px 0px;
-padding:0px;
-border:2px solid silver;
-width:30%;
-height:130px;
-background:#F5F5F5;
-float:left;
-list-style:none;
-text-align:center;
-}
-.items ul li img{
- 
-float:left;
-margin:5px;
-margin-top:5px;
-}
-</style>
-<div class="items">
-<ul>
-<li>স্নাতক সম্মান কর্নার<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyqK0heBQFAoa5OrGPxqLZiqoNb-32Zc4eHYngiEaMEuE9bAoL8SW5U1W5Sw" width="120" height="100"><a href="#">♥ প্রথম বর্ষ </a><br><a href="#">♥ দ্বিতীয় বর্ষ </a><br><a href="#">♥ তৃতীয় বর্ষ</a><br><a href="#">♥ চতুর্থ বর্ষ</a></li>
-<li>ইন্টারমিডিয়েট কর্নার<br> 
- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQo_2Sz5paCMUtghKCnoUX6u1ZPRzyEeazN1_t1dsQfdfleRiFpKSmUY2A" width="120" height="100"><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 1st year.html">♥ প্রথম বর্ষ</a><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 2nd year.html">♥ দ্বিতীয় বর্ষ</a></li>
-<li>দাখিল কর্নার<br>
-<img src="http://nctb.portal.gov.bd/sites/default/files/files/nctb.portal.gov.bd/front_service_box/19e8b5ae_6ae8_49d4_8d84_81eb15911974/open-book.png" width="120" height="100"><a href="#">♥ নবম শ্রেনি</a><br><a href="#">♥ দশম শ্রেনি</a></li>
-<li>জে,ডি,সি কর্নার<br>
-<img src="http://nctb.portal.gov.bd/sites/default/files/files/nctb.portal.gov.bd/front_service_box/92981002_dd95_49f4_8c45_7412324b06d0/raise-your-hand-to-ask%20(4).png" width="120" height="100"><a href="#">♥ অষ্টম শ্রেনি</a><br><a href="#">♥ জে,এস,সি</a></li>
-<li>প্রাথমিক সমাপনী কর্নার<br>
-<img src="http://nctb.portal.gov.bd/sites/default/files/files/nctb.portal.gov.bd/front_service_box/9fab4051_90c4_41b4_9e47_e8b21f61bf24/girl-with-ponytails%20(4).png" width="120" height="100"><a href="#"> ♥ প্রাথ.সমাপনী</a> <br><a href="#"> ♥ বৃত্তি</a> <br><a href="#">♥ মাদ্রাসা</a></li>
-<li>কারিগরি শিক্ষা কর্নার<br>
-<img src="http://nctb.portal.gov.bd/sites/default/files/files/nctb.portal.gov.bd/front_service_box/1bb65a9d_62d2_42d1_8996_f6f06502c759/checklist-symbol%20(3).png" width="120" height="100"><a href="https://kmrasel9748.github.io/newexprience2/Computer">♥ কম্পিউটার</a><br><a href="#">♥ মার্কেটিং</a> <br><a href="https://www.sec.ac.bd/">♥ ইঞ্জিনিয়ারিং</a><br><a href="www.eduicon.com/Institute/More/?page=institute.php&amp;Institute_Nature_ID=2&amp;Institute_Category_ID=2&amp;Degree_Level_ID=1"> ♥ ডিপ্লমা</a></li>
-<li>রেজাল্টশীট কর্নার<br>
-<a href="https://kmrasel9748.github.io/newexprience2/Results sheet.html"><img src="https://image.shutterstock.com/image-vector/survey-exam-form-paper-sheets-260nw-588489734.jpg" width="120" height="100">♥ এইচ,এস,সি<br>♥ এস,এস,সি<br>♥ জে,ডি.সি<br> ♥ কারিগরি শিক্ষা<br>♥ স্নাতক সম্মান</a></li>
-<li>ব্যক্তিগত সাইট কর্নার<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy0zA7owI2ol_DdhYhnpRVbjLe2Nv6hnwwIGvfjzCqgDXvVcsd_i109Wc" width="120" height="100"><a href="https://kmrasel9748.github.io/newexprience2/My%20personal%20bayodata">♥ পার্সোনাল বায়োডাটা</a> <br><a href="#">♥ ফ্যামিলি ফটো</a><br><a href="https://kmrasel9748.github.io/newexprience2/n my profile page.html">♥ প্রোফাইল</a> <br><a href="https://kmrasel9748.github.io/newexprience2/Contact%20me2">♥ যোগাযোগ</a></li>
-<li>আমার প্রোগ্রাম সমূহ<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP3DMP9qz3FmvE3KT60UGn4g1whqxVa8pXPgImQgIw9_wH5g5n17DABw" width="120" height="100"><a href="#">♥ ফটোগ্রাফি</a><br><a href="https://kmrasel9748.github.io/newexprience2/Documents">♥ পার্সোনাল ডকুমেন্ট</a><br><a href="https://kmrasel.github.io/newexprience/My%20poem.html">♥ কবিতা সমূহ</a><br><a href="http://dik-grantha.com/">♥ লাইব্রেরী</a></li>
-<li>প্রাতিষ্ঠানিক ওয়েবসাইট<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfXJL5OmlHqnJoJWkIk6DpupxvsjzWM5VxVSFpRloqdfgllbyp8N7X2mLh" width="120" height="100"><a href="https://smcollegemorrelgonj.jessoreboard.gov.bd/">♥ কলেজ ওয়েবসাইট</a> <br><a href="http://www.nu.ac.bd/">♥ বিশ্ববিদ্যালয় ওয়েবসাইট</a><br><a href="http://www.bteb.gov.bd">♥ কারিগরি শিক্ষা বোর্ড</a></li>
-<li>Social Media Corner<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEOLJ1zgqYwgbN86KVv5nLSLr2F0DSgOHgi_yBk-lQpl6xguuWn4Az9pWC" width="120" height="100">
-<a href="https://facebook.com">♥ Facebook</a><br><a href="https://youtube.com">♥ Youtube</a><br><a href="https://google.com">♥ Google Sarch</a><br><a href="http://www.bing.com/?scope=web&amp;mkt=en-WW&amp;FORM=QBLH">♥ Bing Sarch</a><br><a href="https://twitter.com">♥ Twitter</a></li>
-<li>Learning Educational Websites<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVzcWKKMkvHsvQlrpLbADi0KXMtYfh-BAqDVUoViViA9JGzEeypfxuCOWc" width="120" height="100"><a href="https://bn.khanacademy.org/">♥ Khan Academy</a><br><a href="https://bn.m.wikipedia.org/wiki/বাংলা_উইকিপিডিয়া">♥ Wikipidia</a><br><a href="http://nctb.gov.bd/">♥ Nctb board</a><br><a href="http://shikkhok.com/কোর্স-তালিকা/">♥ Sikkah</a></li>
-<li>The place of Bangladesh<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgtudlWztqfMTcj7P2zBX8Nh7UQnAIXj3apVYEtN6c5fVK3pngnfWGTig" width="120" height="100"><a href="https://www.shutterstock.com/search/bangladesh+river">♥ The rivers</a><br><a href="###">♥ The animals</a><br><a href="https://pixabay.com/en/photos/bangladesh/">♥ The forest</a><br><a href="https://www.bangladeshmuseum.gov.bd/">♥ The mugium</a></li>
-<li>Downloder sites<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAXYcOcOIAMAGwmC8qTAMF1hLpl8u4ckZ3vGwealhS7-UmKwSEw9NexhY" width="120" height="100"><a href="http://www.fusionbd.com">♥ FusionBd</a><br><a href="https://www.bdmusic24.net/">♥ Bd music</a><br><a href="https://banglanatok.com/">♥ Waptrick</a><br><a href="https://youtube.com">♥ Youtube</a></li>
-  
  
  
  
- 
- 
- <li>Online Newspapers<br>
-
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Dig3Hm41Mb3kbv1EfdCJGcKNEaepeRXSFCk54mrIRVCx2sKx9GsjuFc" width="120" height="100"><a href="https://www.prothomalo.com/">♥ Prothom-Alo</a><br><a href="http://www.dailynayadiganta.com/">♥ Noya-Digonto</a><br><a href="http://www.dailysangram.com/">♥ Songgram</a><br><a href="https://www.jugantor.com/">♥ Juganttor</a></li>
-
-<li>Magical website<br>
-
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPIUSIMT4oqB1zdHyT2Dx3y-LzwIbWpWd2FVxiGCjiC0XNSIB9uPWZg8YR_Q" width="120" height="100"><a href="http://www.thefacesoffacebook.com">♥ World faces</a><br><a href="https://www.printfriendly.com/">♥ Page printer</a><br><a href="https://zoomquilt.org">♥ Vootury</a><br><a href="https://yyyyyyy.info">♥ amazine</a></li>
- 
- 
- 
- 
- 
- 
- 
-</ul>
-</div>
+ <style>
+  . item{
+   border:2px solid black;
+   width:940px;
+   height;1400px;
+   float:left;
+   }
+   </style>
+<div class="item">
+ </div>
 <style type="text/css">
  
 .welcome{
