--- a/x2.html
+++ b/x2.html
@@ -298,8 +298,18 @@ color:white;
 
 
 </div>
-
-
+<style>
+  . items103{
+   border:2px solid silver;
+   width:70%;
+   height:1400px;
+   float:left;
+   }
+   
+   </style>
+<div class="items103>
+            
+            </div>
 
 
 
