--- a/practic(4).html
+++ b/practic(4).html
@@ -192,6 +192,11 @@ font-size:20px;
      <a href=""><i class="fa fa-user" aria-hidden="true"></i> Admin Login</a>
     </div> 
    </section> 
+   <style>
+  .menu-section{
+   font-size:30px;
+   }
+    </style>
    <section class="menu-section"> 
     <ul class="menu"> 
      <li><a href="https://kmrasel9748.github.io/newexprience2/index(01)"><ss1>প্রথম পাতা</ss1></a></li> 
