--- a/practic(4).html
+++ b/practic(4).html
@@ -569,7 +569,7 @@ margin-top:5px;
 <div class="items" >
 <ul>
 <li><b>স্নাতক সম্মান কর্নার</b><br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyqK0heBQFAoa5OrGPxqLZiqoNb-32Zc4eHYngiEaMEuE9bAoL8SW5U1W5Sw"width="120" height="100"><a href="#" >♥ প্রথম বর্ষ </a><br><a href="#" >♥ দ্বিতীয় বর্ষ </a><br><a href="#" >♥ তৃতীয় বর্ষ</a><br><a href="#" >♥ চতুর্থ বর্ষ</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyqK0heBQFAoa5OrGPxqLZiqoNb-32Zc4eHYngiEaMEuE9bAoL8SW5U1W5Sw"width="120" height="100"><a href="https://kmrasel9748.github.io/newexprience2/1st year page.html" >♥ প্রথম বর্ষ </a><br><a href="https://kmrasel9748.github.io/newexprience2/2nd year page.html" >♥ দ্বিতীয় বর্ষ </a><br><a href="3rd year page.html" >♥ তৃতীয় বর্ষ</a><br><a href="https://kmrasel9748.github.io/newexprience2/4th year pags.html" >♥ চতুর্থ বর্ষ</a></li>
 <li><b>ইন্টারমিডিয়েট কর্নার</b><br> 
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQo_2Sz5paCMUtghKCnoUX6u1ZPRzyEeazN1_t1dsQfdfleRiFpKSmUY2A"width="120"height="100"><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 1st year.html" >♥ প্রথম বর্ষ</a><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 2nd year.html" >♥ দ্বিতীয় বর্ষ</a></li>
 <li><b>দাখিল কর্নার</b><br>
