--- a/practic(4).html
+++ b/practic(4).html
@@ -116,11 +116,11 @@ float:right;
 color:white;
 }
 .toptext span{
-font-size:25px;
+font-size:35px;
 
 }
 .toptext tox{
-font-size:20px;
+font-size:25px;
 }
 </style>
 <div class="toprk" >
@@ -129,8 +129,8 @@ font-size:20px;
 <img src="logo.png" width="90"height="90">
 </div>
 <div class="toptext" >
-<span>K.M.RASEL NEW EDUCATIONAL WEBSITE</span><br>
-<tox>My new profile</tox>
+<span>কে,এম.রাসেল নতুুুন ডিজিটাল শিক্ষাগত ওয়েবসাইট<pan><br>
+<tox>আমার নতুন সাইট</tox>
 </div>
 </div>
 </div>
@@ -314,7 +314,7 @@ color:white;
 <body>
 <div class="left" >
 <div class="notice" >
-<h3>Notice board</h3>
+<h3>নোটিশ বোর্ড</h3>
 <iframe width="100%"height="135"src="notice.html"borderframe="0"allowfullscree>
 </iframe>
 </div>
@@ -410,12 +410,12 @@ color:bule;
 </style>
 <div class="right" >
 <div class="box" >
-<h1>Digree Type</h1>
+<h1>ডিগ্রি টাইপ</h1>
 <a href="km rasel.jpg"><img src="https://kmrasel9748.github.io/newexprience2/km%20rasel.jpg"width="220"height="180"></a>
 <jr><br>K.M.RASEL<br>BA (Hon's) Digree<br>National University<br>Branch of Govt.Sm.College.Morrelgonj,Bagerhat</jr>
 </div>
 <div class="views" >
-<h1>View us</h1>
+<h1> ভিজিটর কাউন্্টার</h1>
 
 
 
@@ -444,12 +444,12 @@ family: Verdana; color: #000000">blog counter</a>
 </div>
 
 <div class="Certificates" >
-<h1>Enjoy this videos</h1>
+<h1>ভিডিওটি উপভোগ করুন</h1>
 <a href="https://m.youtube.com/watch?v=YDiZYvJN94o" ><img src="asif1.jpg" width="100%"height="220"></a>
 </div>
 
 <div class="results" >
-<h1>Programmer Type</h1>
+<h1>প্রোগ্রামার টাইপ</h1>
 <a href="26.jpg"><img src="https://kmrasel.github.io/newexprience/26.jpg"width="220"height="180"></a>
 <jr><br>Website designing & developing<br>K.M.RASEL<br>Programmer of<br>Html & Css</jr>
 </div>
@@ -457,7 +457,7 @@ family: Verdana; color: #000000">blog counter</a>
 
 
 <div class="Videos" >
-<h1>Videos</h1>
+<h1>ভিডিও</h1>
 <a href="https://m.youtube.com/watch?v=cMsLFppH0cY" ><img src="imran.jpg" width="100%"height="220"></a>
 
 </div>
