--- a/practic(4).html
+++ b/practic(4).html
@@ -415,7 +415,7 @@ color:bule;
 <jr><br>K.M.RASEL<br>BA (Hon's) Digree<br>National University<br>Branch of Govt.Sm.College.Morrelgonj,Bagerhat</jr>
 </div>
 <div class="views" >
-<h1> ভিজিটর কাউন্্টার</h1>
+<h1> ভিজিটর কাউন্টার</h1>
 
 
 
@@ -566,10 +566,15 @@ margin:5px;
 margin-top:5px;
 }
 </style>
+ <style>
+  b{
+   font-size:50px;
+   }
+  </style>
 <div class="items" >
 <ul>
 <li><b>স্নাতক সম্মান কর্নার</b><br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyqK0heBQFAoa5OrGPxqLZiqoNb-32Zc4eHYngiEaMEuE9bAoL8SW5U1W5Sw"width="120" height="100"><a href="https://kmrasel9748.github.io/newexprience2/1st year page.html" >♥ প্রথম বর্ষ </a><br><a href="https://kmrasel9748.github.io/newexprience2/2nd year page.html" >♥ দ্বিতীয় বর্ষ </a><br><a href="3rd year page.html" >♥ তৃতীয় বর্ষ</a><br><a href="https://kmrasel9748.github.io/newexprience2/4th year pags.html" >♥ চতুর্থ বর্ষ</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyqK0heBQFAoa5OrGPxqLZiqoNb-32Zc4eHYngiEaMEuE9bAoL8SW5U1W5Sw"width="120" height="100"><a href="https://kmrasel9748.github.io/newexprience2/1st year page1.html" >♥ প্রথম বর্ষ </a><br><a href="https://kmrasel9748.github.io/newexprience2/2nd year page2.html" >♥ দ্বিতীয় বর্ষ </a><br><a href="3rd year page3.html" >♥ তৃতীয় বর্ষ</a><br><a href="https://kmrasel9748.github.io/newexprience2/4th year page4.html" >♥ চতুর্থ বর্ষ</a></li>
 <li><b>ইন্টারমিডিয়েট কর্নার</b><br> 
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQo_2Sz5paCMUtghKCnoUX6u1ZPRzyEeazN1_t1dsQfdfleRiFpKSmUY2A"width="120"height="100"><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 1st year.html" >♥ প্রথম বর্ষ</a><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 2nd year.html" >♥ দ্বিতীয় বর্ষ</a></li>
 <li><b>দাখিল কর্নার</b><br>
