--- a/practic(4).html
+++ b/practic(4).html
@@ -130,7 +130,7 @@ font-size:25px;
 <img src="logo.png" width="90"height="90">
 </div>
 <div class="toptext" >
-<span>কে,এম.রাসেল নতুুুন ডিজিটাল শিক্ষাগত ওয়েবসাইট<pan><br>
+<span>কে,এম,রাসেল নতুুুন ডিজিটাল শিক্ষাগত ওয়েবসাইট<pan><br>
 <tox>আমার নতুন সাইট</tox>
 </div>
 </div>
@@ -550,7 +550,7 @@ News
 <style type="text/css">
 
 .items ul li{
-margin:10px;
+margin:10px 10px 0px 0px;
 padding:0px;
 border:2px solid silver;
 width:30%;
@@ -598,7 +598,7 @@ margin-top:5px;
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEOLJ1zgqYwgbN86KVv5nLSLr2F0DSgOHgi_yBk-lQpl6xguuWn4Az9pWC"width="120" height="80">
 <a href="https://facebook.com" >♥ Facebook</a><br><a href="https://youtube.com" >♥ Youtube</a><br><a href="https://google.com" >♥ Google Sarch</a><br><a href="http://www.bing.com/?scope=web&mkt=en-WW&FORM=QBLH" >♥ Bing Sarch</a><br><a href="https://twitter.com" >♥ Twitter</a></li>
 <li><b>Learning Educational Websites</b><br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVzcWKKMkvHsvQlrpLbADi0KXMtYfh-BAqDVUoViViA9JGzEeypfxuCOWc"width="120"height="80" ><a href="https://bn.khanacademy.org/" >♥ Khan Academy</a><br><a href="https://bn.m.wikipedia.org/wiki/বাংলা_উইকিপিডিয়া" >♥ Wikipidia</a><br><a href="http://nctb.gov.bd/" >♥ Nctb board</a><br><a href="http://shikkhok.com/কোর্স-তালিকা/" >♥ Sikkah</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVzcWKKMkvHsvQlrpLbADi0KXMtYfh-BAqDVUoViViA9JGzEeypfxuCOWc"width="110"height="70" ><a href="https://bn.khanacademy.org/" >♥ Khan Academy</a><br><a href="https://bn.m.wikipedia.org/wiki/বাংলা_উইকিপিডিয়া" >♥ Wikipidia</a><br><a href="http://nctb.gov.bd/" >♥ Nctb board</a><br><a href="http://shikkhok.com/কোর্স-তালিকা/" >♥ Sikkah</a></li>
 <li><b>The place of Bangladesh</b><br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgtudlWztqfMTcj7P2zBX8Nh7UQnAIXj3apVYEtN6c5fVK3pngnfWGTig" width="120"height="80"><a href="https://www.shutterstock.com/search/bangladesh+river">♥ The rivers</a><br><a href="###">♥ The animals</a><br><a href="https://pixabay.com/en/photos/bangladesh/">♥ The forest</a><br><a href="https://www.bangladeshmuseum.gov.bd/">♥ The mugium</a></li>
 <li><b>Downloder sites</b><br>
