--- a/practic(4).html
+++ b/practic(4).html
@@ -559,6 +559,7 @@ background:#F5F5F5;
 float:left;
 list-style:none;
 text-align:center;
+ border-shadow:0px 10px 10px 0px;
 }
 .items ul li img{
  
