--- a/practic(4).html
+++ b/practic(4).html
@@ -552,14 +552,14 @@ News
 .items ul li{
 margin:10px;
 padding:0px;
-border:2px solid silver;
+
 width:30%;
 height:130px;
 background:#F5F5F5;
 float:left;
 list-style:none;
 text-align:center;
- border-shadow:0px 10px 10px 0px;
+ border-shadow:2px 10px 10px 2px silver;
 }
 .items ul li img{
  
