--- a/practic(4).html
+++ b/practic(4).html
@@ -552,7 +552,8 @@ News
 .items ul li{
 margin:10px;
 padding:0px;
-
+border-style:solid silver;
+ border-width:1px 3px 3px 1px;
 width:30%;
 height:130px;
 background:#F5F5F5;
