--- a/practic(4).html
+++ b/practic(4).html
@@ -548,7 +548,12 @@ News
  
  
 <style type="text/css">
-
+.itemfx{
+ border:3px solid green;
+ float:ledt;
+ height:1100px;
+ width:70%;
+ }
 .items ul li{
 margin:10px;
 padding:0px;
@@ -560,7 +565,7 @@ background:#F5F5F5;
 float:left;
 list-style:none;
 text-align:center;
- border-shadow:2px 10px 10px 2px silver;
+ 
 }
 .items ul li img{
  
@@ -574,6 +579,7 @@ margin-top:5px;
    font-size:18px;
    }
   </style>
+ <div class="itemsfx">
 <div class="items" >
 <ul>
 <li><b>স্নাতক সম্মান কর্নার</b><br>
@@ -628,6 +634,7 @@ margin-top:5px;
  
 </ul>
 </div>
+  </div>
 <style type="text/css">
  
 .welcome{
