--- a/practic(4).html
+++ b/practic(4).html
@@ -553,12 +553,13 @@ News
  float:ledt;
  height:1100px;
  width:70%;
+ float:left;
  }
 .items ul li{
 margin:10px;
 padding:0px;
-border-style:solid silver;
- border-width:1px 3px 3px 1px;
+border:2px solid green;
+ 
 width:30%;
 height:130px;
 background:#F5F5F5;
