--- a/practic(4).html
+++ b/practic(4).html
@@ -559,7 +559,7 @@ News
 margin:10px;
 padding:0px;
 border:2px solid green;
- 
+ box-shadow:1px 5px 5px 1px;
 width:30%;
 height:130px;
 background:#F5F5F5;
