--- a/practic(4).html
+++ b/practic(4).html
@@ -549,7 +549,7 @@ News
  
 <style type="text/css">
 .itemfx{
- border:3px solid green;
+ border:3px solid silver;
  float:ledt;
  height:1100px;
  width:70%;
@@ -559,7 +559,7 @@ News
 margin:10px;
 padding:0px;
 border:2px solid green;
- box-shadow:1px 5px 5px 1px;
+ box-shadow:1px 8px 5px 0px;
 width:30%;
 height:130px;
 background:#F5F5F5;
