--- a/practic(4).html
+++ b/practic(4).html
@@ -550,7 +550,7 @@ News
 <style type="text/css">
 .itemfx{
  border:3px solid silver;
- float:ledt;
+ float:left;
  height:1100px;
  width:70%;
  float:left;
@@ -558,8 +558,8 @@ News
 .items ul li{
 margin:10px;
 padding:0px;
-border:2px solid green;
- box-shadow:1px 8px 5px 0px;
+border:2px solid silver;
+ box-shadow:1px 5px 8px 0px;
 width:30%;
 height:130px;
 background:#F5F5F5;
