--- a/practic(4).html
+++ b/practic(4).html
@@ -503,7 +503,7 @@ font-size:20px;
 .newsb{
 
 border:2px solid silver;
-box-shadow:0px 5px 5px 0px;
+box-shadow:0px 3px 3px 0px black;
 width:515px;
 
 height:30px;
