--- a/practic(4).html
+++ b/practic(4).html
@@ -482,7 +482,7 @@ text-align:center;
 
  
  .newsa{
-
+box-shadow:0px 3px 3px 0px black;
 border:2px solid silver;
 
 width:150px;
@@ -522,7 +522,7 @@ float:right;
 <div class="newsa" >
  
 
-News
+ খবর
 
 </div>
 
