--- a/practic(4).html
+++ b/practic(4).html
@@ -560,10 +560,10 @@ margin:10px;
 padding:0px;
 border:2px solid silver;
  box-shadow:1px 5px 8px 0px;
-width:30%;
+width:280px;
 height:130px;
 background:#F5F5F5;
-
+float:left;
 list-style:none;
 text-align:center;
  
