--- a/practic(4).html
+++ b/practic(4).html
@@ -551,7 +551,7 @@ float:right;
 .itemsfx{
  border:3px solid silver;
  float:left;
- height:1400px;
+ height:1200px;
  width:70%;
  float:left;
  }
@@ -579,8 +579,29 @@ margin-top:5px;
   b{
    font-size:18px;
    }
+ . subitem1{
+  width:35%;
+   height:1200px;
+  float:left;
+  border:2px solid green;
+  }
+  . subitem2{
+
+  width:35%;
+
+   height:1200px;
+
+  float:right;
+
+  border:2px solid red;
+
+  }
   </style>
  <div class="itemsfx">
+  <div class="subitem1>
+   </div>
+  <div class="subitem2>
+   </div>
 <div class="items" >
 <ul>
 <li><b>স্নাতক সম্মান কর্নার</b><br>
