--- a/practic(4).html
+++ b/practic(4).html
@@ -551,7 +551,7 @@ float:right;
 .itemsfx{
  border:3px solid silver;
  float:left;
- height:1200px;
+ height:1220px;
  width:70%;
  float:left;
  }
@@ -580,14 +580,14 @@ margin-top:5px;
    font-size:18px;
    }
  .subitem1{
-  width:35%;
+  width:320px;
    height:1200px;
   float:left;
   border:2px solid green;
   }
   .subitem2{
 
-  width:35%;
+  width:320px;
 
    height:1200px;
 
