--- a/practic(4).html
+++ b/practic(4).html
@@ -549,9 +549,9 @@ float:right;
  
 <style type="text/css">
 .itemsfx{
- border:3px solid silver;
+ border:5px dotted blue;
  float:left;
- height:1220px;
+ height:1210px;
  width:70%;
  float:left;
  }
