--- a/practic(4).html
+++ b/practic(4).html
@@ -549,14 +549,15 @@ float:right;
  
 <style type="text/css">
 .itemsfx{
- border:5px dotted blue;
+ margin-top:5px;
+ border:5px dubble dotted blue;
  float:left;
  height:1210px;
  width:70%;
  float:left;
  }
 .items ul li{
-margin:10px;
+margin:0px 10px 10px ;
 padding:0px;
 border:2px solid silver;
  box-shadow:1px 5px 8px 0px;
