--- a/practic(4).html
+++ b/practic(4).html
@@ -550,7 +550,7 @@ float:right;
 <style type="text/css">
 .itemsfx{
  margin-top:5px;
- border:5px dubble dotted blue;
+ border:5px duble dotted blue;
  float:left;
  height:1210px;
  width:70%;
