--- a/practic(4).html
+++ b/practic(4).html
@@ -557,7 +557,7 @@ float:right;
  float:left;
  }
 .items ul li{
-margin:10px 10px 10px 0px ;
+margin:10px;
 padding:0px;
 border:2px solid silver;
  box-shadow:1px 5px 8px 0px;
