--- a/practic(4).html
+++ b/practic(4).html
@@ -548,7 +548,7 @@ float:right;
  
  
 <style type="text/css">
-.itemsfx{
+.itemsf{
  margin-top:5px;
  border:8px dotted blue;
  float:left;
@@ -561,7 +561,7 @@ margin:10px;
 padding:0px;
 border:2px solid silver;
  box-shadow:1px 5px 8px 0px;
-width:280px;
+width:70%;
 height:130px;
 background:#F5F5F5;
 float:left;
