--- a/practic(4).html
+++ b/practic(4).html
@@ -412,9 +412,11 @@ color:bule;
 <div class="right" >
 <div class="box" >
 <h1>ডিগ্রি টাইপ</h1>
-<a href="km rasel.jpg"><img src="https://kmrasel9748.github.io/newexprience2/km%20rasel.jpg"width="220"height="180"></a>
-<jr><br>K.M.RASEL<br>BA (Hon's) Digree<br>National University<br>Branch of Govt.Sm.College.Morrelgonj,Bagerhat</jr>
-</div>
+<div style="text-align:center;padding:1em 0;"> <h3><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/de/country/bd"><span style="color:gray;">Aktuelle Uhrzeit / Ortszeit</span><br />Bangladesch</a></h3> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=de&size=medium&timezone=Asia%2FDhaka" width="100%" height="115" frameborder="0" seamless></iframe> <small style="color:gray;">&copy; <a href="https://www.zeitzonenrechner.net/" style="color: gray;">Zeitzonenrechner</a></small> </div>
+ 
+ 
+ 
+ </div>
 <div class="views" >
 <h1> ভিজিটর কাউন্টার</h1>
 
