--- a/practic(4).html
+++ b/practic(4).html
@@ -340,8 +340,8 @@ height:1500px;
 float:right;
 }
 .box{
-
-height:350px;
+border:2px solid blue;
+height:150px;
 
 }
 .box h1{
@@ -453,7 +453,7 @@ family: Verdana; color: #000000">blog counter</a>
 
 <div class="results" >
 <h1>প্রোগ্রামার টাইপ</h1>
-<a href="26.jpg"><img src="https://kmrasel.github.io/newexprience/26.jpg"width="220"height="180"></a>
+<a href="26.jpg"><img src="https://kmrasel.github.io/newexprience/26.jpg"width="100%"height="180"></a>
 <jr><br>Website designing & developing<br>K.M.RASEL<br>Programmer of<br>Html & Css</jr>
 </div>
 
