--- a/practic(4).html
+++ b/practic(4).html
@@ -341,8 +341,8 @@ float:right;
 }
 .box{
 border:2px solid blue;
-height:150px;
-
+height:350px;
+background:silver;
 }
 .box h1{
 margin-top:20px;
