--- a/practic(4).html
+++ b/practic(4).html
@@ -340,12 +340,11 @@ height:1500px;
 float:right;
 }
 .box{
-border:2px solid blue;
-height:350px;
-background:silver;
+
+height:300px;
 }
 .box h1{
-margin-top:20px;
+margin-top:0px;
 border:2px solid green;
 text-align:center;
 background:green;
@@ -412,7 +411,7 @@ color:bule;
 <div class="right" >
 <div class="box" >
 <h1>ডিগ্রি টাইপ</h1>
-<div style="text-align:center;padding:1em 0;"> <h3><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/de/country/bd"><span style="color:gray;">Bangladesch</a></h3> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=de&size=medium&timezone=Asia%2FDhaka" width="100%" height="115" frameborder="0" seamless></iframe> <small style="color:gray;">&copy; <a href="https://www.zeitzonenrechner.net/" style="color: gray;">Zeitzonenrechner</a></small> </div>
+<div style="text-align:center;padding:1em 0;"> <h3><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/de/country/bd"><span style="color:gray;"></a></h3> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=de&size=medium&timezone=Asia%2FDhaka" width="100%" height="115" frameborder="0" seamless></iframe> <small style="color:gray;">&copy; <a href="https://www.zeitzonenrechner.net/" style="color: gray;">Zeitzonenrechner</a></small> </div>
  
  
  
