--- a/practic(4).html
+++ b/practic(4).html
@@ -340,7 +340,7 @@ height:1500px;
 float:right;
 }
 .box{
-
+margin-top:20px;
 height:300px;
 }
 .box h1{
@@ -410,7 +410,7 @@ color:bule;
 </style>
 <div class="right" >
 <div class="box" >
-<h1>ডিগ্রি টাইপ</h1>
+<h1>ডিজিটাল ঘড়ি</h1>
 <div style="text-align:center;padding:1em 0;"> <h3><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/de/country/bd"><span style="color:gray;"></a></h3> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=de&size=medium&timezone=Asia%2FDhaka" width="100%" height="115" frameborder="0" seamless></iframe> <small style="color:gray;">&copy; <a href="https://www.zeitzonenrechner.net/" style="color: gray;">Zeitzonenrechner</a></small> </div>
  
  
