--- a/practic(4).html
+++ b/practic(4).html
@@ -340,6 +340,7 @@ height:1500px;
 float:right;
 }
 .box{
+ border:5px dotted red;
 margin-top:20px;
 height:200px;
 }
@@ -366,7 +367,7 @@ text-align:center;
 .results{
 margin-top:5px;
 
-height:350px;
+height:300px;
 
 }
 .results h1{
