--- a/practic(4).html
+++ b/practic(4).html
@@ -351,7 +351,22 @@ text-align:center;
 background:green;
 color:white;
 }
-.views{
+.me{
+margin-top:10px;
+
+height:150px;
+
+}
+.me h1{
+margin-top:0px;
+border:2px solid green;
+background:green;
+color:white;
+text-align:center;
+}
+ 
+ 
+ views{
 margin-top:10px;
 
 height:150px;
@@ -364,6 +379,9 @@ background:green;
 color:white;
 text-align:center;
 }
+ 
+ 
+ 
 .results{
 margin-top:5px;
 
@@ -417,6 +435,9 @@ color:bule;
  
  
  </div>
+ <div class="me">
+  <h1>Digree type</h1>
+  </div>
 <div class="views" >
 <h1> ভিজিটর কাউন্টার</h1>
 
