--- a/practic(4).html
+++ b/practic(4).html
@@ -354,7 +354,7 @@ color:white;
 .me{
 margin-top:10px;
 
-height:150px;
+height:350px;
 
 }
 .me h1{
@@ -436,6 +436,7 @@ color:bule;
  
  </div>
  <div class="me">
+  <img src="25.jpg"width="100%" height="150">
   <h1>Digree type</h1>
   </div>
 <div class="views" >
