--- a/practic(4).html
+++ b/practic(4).html
@@ -435,9 +435,10 @@ color:bule;
  
  
  </div>
+ <h1>Digree type</h1>
  <div class="me">
-  <img src="25.jpg"width="100%" height="150">
-  <h1>Digree type</h1>
+  <img src="25.jpg"width="100%" height="150px">
+  
   </div>
 <div class="views" >
 <h1> ভিজিটর কাউন্টার</h1>
