--- a/practic(4).html
+++ b/practic(4).html
@@ -439,6 +439,7 @@ color:bule;
  <div class="me">
   <h1>Digree type</h1>
   <img src="15.jpg"width="100%" height="150px">
+  K.M.RASEL<br>Student of s.m.college morrelgong<br> Branch of national university,Dhaka.
   
   </div>
 <div class="views" >
