--- a/practic(4).html
+++ b/practic(4).html
@@ -354,7 +354,7 @@ color:white;
 .me{
 margin-top:10px;
 
-height:300px;
+height:350px;
 
 }
 .me h1{
@@ -439,7 +439,7 @@ color:bule;
  <div class="me">
   <h1>Digree type</h1>
   <img src="15.jpg"width="100%" height="180px">
- <h6> K.M.RASEL</h6><br>Student of s.m.college morrelgong<br> Branch of national university,Dhaka.
+ K.M.RASEL<br>Student of s.m.college morrelgong,bagerhat.<br> Branch of national university,Dhaka.
   
   </div>
 <div class="views" >
