--- a/practic(4).html
+++ b/practic(4).html
@@ -398,7 +398,7 @@ text-align:center;
 .Certificates{
 margin-top:10px;
 e
-height:320px;
+height:350px;
 
 }
 .Certificates h1{
@@ -430,7 +430,7 @@ color:bule;
 <div class="right" >
 <div class="box" >
 <h1>ডিজিটাল ঘড়ি</h1>
-<div style="text-align:center;padding:1em 0;"> <h3><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/de/country/bd"><span style="color:gray;">Online clock</a></h3> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=de&size=medium&timezone=Asia%2FDhaka" width="100%" height="115" frameborder="0" seamless></iframe> <small style="color:gray;">&copy; <a href="https://www.zeitzonenrechner.net/" style="color: gray;">Zeitzonenrechner</a></small> </div>
+<div style="text-align:center;padding:1em 0;"> <h3><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/de/country/bd"><span style="color:gray;"></a></h3> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=de&size=medium&timezone=Asia%2FDhaka" width="100%" height="115" frameborder="0" seamless></iframe> <small style="color:gray;">&copy; <a href="https://www.zeitzonenrechner.net/" style="color: gray;">Zeitzonenrechner</a></small> </div>
  
  
  
