--- a/my family photos4.html
+++ b/my family photos4.html
@@ -30,7 +30,8 @@ width:88%;
 float:right;
 height:80px;
 line-height:80px;
-font-size:50px;
+font-size:60px;
+  color:white;
 }
 .welcome{
 margin-top:10px;
